feat: updated owners dashboard

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -10,6 +10,9 @@
       "profile": "Profile",
       "dashboard": "User dashboard",
       "hostDashboard": "Host dashboard",
+      "paymentSettings": "Payment settings",
+      "mySpaces": "My spaces",
+      "bookings": "Bookings",
       "favorites": "Favorites list",
       "signOut": "Sign out"
     },
@@ -649,18 +652,28 @@
     "totalBookings": "Total Bookings",
     "occupancyRate": "Occupancy Rate",
     "paymentSetup": "Payment Setup",
+    "paymentSetupDescription": "Connect Stripe to receive payouts securely.",
+    "paymentSetupCta": "Complete your Stripe Connect onboarding to start receiving payouts.",
+    "paymentSetupPageDescription": "Follow the guided setup to connect your Stripe account and manage payouts.",
     "myListings": "My Listings",
+    "myListingsDescription": "Publish and manage the spaces you offer to guests.",
+    "myListingsPageDescription": "Review your active listings, finish drafts, and create new spaces.",
     "publishedListings": "Published listings",
     "unpublishedListings": "Unpublished listings",
     "noPublishedListings": "You haven't published any spaces yet.",
     "noUnpublishedListings": "No unpublished spaces at the moment.",
     "recentBookings": "Recent Bookings",
+    "recentBookingsDescription": "Review your latest reservations and respond to guests promptly.",
     "analytics": "Analytics",
     "calendar": "Calendar",
     "active": "active",
     "inactive": "inactive",
     "hour": "hour",
     "bookings": "bookings",
+    "bookingsCount": "{{count}} bookings",
+    "listingsCount": "{{count}} listings",
+    "viewAll": "View all",
+    "manage": "Manage",
     "earnings": "Earnings",
     "edit": "Edit",
     "view": "View",
@@ -679,7 +692,14 @@
     "unknownGuest": "Unknown Guest",
     "confirmed": "confirmed",
     "pending": "pending",
-    "completed": "completed"
+    "completed": "completed",
+    "paymentSettingsTitle": "Payment settings",
+    "paymentSettingsSubtitle": "Configure payouts and manage your Stripe connection.",
+    "mySpacesTitle": "My spaces",
+    "mySpacesSubtitle": "Organize and update the spaces you offer.",
+    "bookingsTitle": "Bookings",
+    "bookingsSubtitle": "Track, review, and manage your reservations.",
+    "backToDashboard": "Back to dashboard"
   },
   "map": {
     "viewDetails": "View details",
