--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -11,6 +11,9 @@
       "profile": "Perfil",
       "dashboard": "Dashboard de usuario",
       "hostDashboard": "Dashboard de anfitrión",
+      "paymentSettings": "Configuración de pagos",
+      "mySpaces": "Mis espacios",
+      "bookings": "Reservas",
       "favorites": "Lista de favoritos",
       "signOut": "Cerrar sesión"
     },
@@ -651,18 +654,28 @@
     "totalBookings": "Reservas Totales",
     "occupancyRate": "Tasa de Ocupación",
     "paymentSetup": "Configuración de Pagos",
+    "paymentSetupDescription": "Conecta Stripe para recibir pagos de forma segura.",
+    "paymentSetupCta": "Completa el proceso de Stripe Connect para comenzar a recibir tus ganancias.",
+    "paymentSetupPageDescription": "Sigue la guía para conectar tu cuenta de Stripe y gestionar los pagos.",
     "myListings": "Mis Listados",
+    "myListingsDescription": "Publica y administra los espacios que ofreces a tus huéspedes.",
+    "myListingsPageDescription": "Revisa tus listados activos, termina borradores y crea nuevos espacios.",
     "publishedListings": "Listados publicados",
     "unpublishedListings": "Listados no publicados",
     "noPublishedListings": "Aún no has publicado ningún espacio.",
     "noUnpublishedListings": "No tienes espacios sin publicar en este momento.",
     "recentBookings": "Reservas Recientes",
+    "recentBookingsDescription": "Revisa tus reservas más recientes y responde a tus huéspedes a tiempo.",
     "analytics": "Analíticas",
     "calendar": "Calendario",
     "active": "activo",
     "inactive": "inactivo",
     "hour": "hora",
     "bookings": "reservas",
+    "bookingsCount": "{{count}} reservas",
+    "listingsCount": "{{count}} listados",
+    "viewAll": "Ver todo",
+    "manage": "Administrar",
     "earnings": "Ganancias",
     "edit": "Editar",
     "view": "Ver",
@@ -681,7 +694,14 @@
     "unknownGuest": "Huésped Desconocido",
     "confirmed": "confirmado",
     "pending": "pendiente",
-    "completed": "completado"
+    "completed": "completado",
+    "paymentSettingsTitle": "Configuración de pagos",
+    "paymentSettingsSubtitle": "Configura tus pagos y gestiona tu conexión con Stripe.",
+    "mySpacesTitle": "Mis espacios",
+    "mySpacesSubtitle": "Organiza y actualiza los espacios que ofreces.",
+    "bookingsTitle": "Reservas",
+    "bookingsSubtitle": "Controla, revisa y administra tus reservas.",
+    "backToDashboard": "Volver al panel"
   },
   "map": {
     "viewDetails": "Ver detalles",
