feat: added uploader for avatar

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -846,6 +846,13 @@
     "yearsOnPlatform": "years on Keysely",
     "editProfile": "Edit Profile",
     "keepProfileUpdated": "Keep your profile up to date to build trust with guests",
+    "changePhoto": "Change photo",
+    "updateAvatar": "Update profile photo",
+    "updateAvatarDescription": "Upload an image and adjust it before saving.",
+    "savePhoto": "Save photo",
+    "avatarUpdated": "Profile photo updated successfully!",
+    "avatarInvalidType": "Only image files are allowed",
+    "avatarTooLarge": "Image cannot exceed 5MB",
     "verifiedIdentity": "Verified Identity",
     "verifiedIdentityDesc": "This user has confirmed their identity and contact information",
     "aboutMe": "About me",
