--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -848,6 +848,13 @@
     "yearsOnPlatform": "años en Keysely",
     "editProfile": "Editar Perfil",
     "keepProfileUpdated": "Mantén tu perfil actualizado para generar confianza",
+    "changePhoto": "Cambiar foto",
+    "updateAvatar": "Actualizar foto de perfil",
+    "updateAvatarDescription": "Sube una imagen y ajústala antes de guardar.",
+    "savePhoto": "Guardar foto",
+    "avatarUpdated": "¡Foto de perfil actualizada!",
+    "avatarInvalidType": "Solo se permiten archivos de imagen",
+    "avatarTooLarge": "La imagen no puede exceder 5MB",
     "verifiedIdentity": "Identidad Verificada",
     "verifiedIdentityDesc": "Este usuario ha confirmado su identidad e información de contacto",
     "aboutMe": "Acerca de mí",
